Fix overflow popup width to display full content
- before this patch because of the fixed width of popup some level of big content items or you can say elements gets hiddedn on screen
- this will fix the issue and make sure all the content gets visible and for overflow condition we will add scroll bar

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -382,7 +382,7 @@ html[data-theme='dark'] .savemodified.unotoolbutton .unobutton img {
 
 .unotoolbutton.notebookbar.has-label > *:not(.arrowbackground) { /*so they stay side by side*/
 	display: table-cell;
-	width: 100%;
+	width: max-content;
 	height: 100%;
 }
 
